changes to footer css to fix flex containers on mobile

--- a/themes/tale/assets/scss/tale/_base.scss
+++ b/themes/tale/assets/scss/tale/_base.scss
@@ -249,15 +249,18 @@ footer {
 
   .flex-container {
     display: flex;
-    align-items: flex-start;
+    align-items: baseline;
+    justify-content: space-around;
+    margin: auto;
 
   .flex-container-1 {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     font-family: $serif-primary;
-    max-width: 50%;
-    margin: auto;
+    max-width: 100%;
+    height: 100%;
+
   }
 
  .flex-container-2 {
@@ -265,8 +268,8 @@ footer {
     flex-direction: row;
     justify-content: space-around;
     font-family: $serif-primary;
-    max-width: 50%;
-    margin: auto;
+    max-width: 100%;
+    height: 100%;
   }
   }
   span {
